objects/RFP__c.object
<CustomObject>
    <description>R5 - Request For Proposal</description>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of 2461</description>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFQ</relationshipLabel>
        <relationshipName>RFQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_to_Issue_Date__c</fullName>
        <description>created as part of R5 - 2461</description>
        <label>Approved to Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Number__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Quotation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_A1__c</fullName>
        <description>R5 - Created as part of R52461</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_A2__c</fullName>
        <description>R5 - Created as part of R5 2461</description>
        <label>A2</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_A3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Account_Manager_Country__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Opportunity Owner Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of req 2461</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfp_Approval_Decision_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Approval Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of req 2461</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved__c</fullName>
        <description>R5 - created as part of req 2461</description>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Comment__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Comments__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Commercial_Terms__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Commercial Terms</label>
        <picklist>
            <picklistValues>
                <fullName>ABB Standard T/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Negotiated Agreement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Due_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Expected_delivery_Date__c</fullName>
        <description>R5 - created as part of req 2461</description>
        <label>Expected delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Notice_Submission_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Notice Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Opportunity__c</fullName>
        <description>R5 - 2461</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFQ</relationshipLabel>
        <relationshipName>RFP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rfp_Proposal_Not_Issued__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Quotation Not Issued</label>
        <picklist>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Q1__c</fullName>
        <defaultValue>$Label.Rfp_Customer_Rfq_Specification</defaultValue>
        <description>R5 - Created as part of Req 2461</description>
        <label>Q1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Q2__c</fullName>
        <defaultValue>$Label.Rfp_Supporter_on_bid_team</defaultValue>
        <description>R5 - Created as part of req 2461</description>
        <label>Q2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Q3__c</fullName>
        <defaultValue>$Label.Rfp_Acc_Manager_met_with_Customer</defaultValue>
        <description>R5 - Created as part of Req 2461</description>
        <label>Q3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Processings_Associated__c</fullName>
        <label>Total Processings Associated</label>
        <summaryForeignKey>Rfp_Processing__c.Rfp_Processing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Results_Associated__c</fullName>
        <label>Total Results Associated</label>
        <summaryForeignKey>Rfp_Results__c.Rfp_Results__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_RFQ_s__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of RFQ&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RFQ</label>
    <nameField>
        <label>RFQ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFQ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_RFQ_On_Opp_With_Bulk_Account</fullName>
        <active>true</active>
        <description>Related Opportunity cannot have Bulk Business Account Customer.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
    CONTAINS(LOWER(Rfp_Opportunity__r.Account.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Opportunity cannot have Bulk Business Account Customer.</errorMessage>
    </validationRules>
</CustomObject>